adds art token updates to contract and client app

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,3 +6,10 @@
   border-radius: 50%;
   display: inline-block;
 }
+
+.tokenPreview {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  display: inline-block;
+}
